fix: multiple linux scrollbars

--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,7 @@ main.card-container {
   border-radius: 16px;
   background-color: #262626;
   box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.5);
+  overflow: auto;
 }
 
 .ag-data-header {
@@ -206,6 +207,7 @@ main.card-container {
   background-color: #0f0f0f;
   border-radius: 8px;
   border: 1px solid #404040;
+  overflow: auto;
 }
 
 .p4-default {
